secondfile/objects/Deal_Hash__c.object
<CustomObject>
    <fields>
        <fullName>API_Process_Error__c</fullName>
        <label>API Process Error</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASE_MACD_Lock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ASE MACD Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASE_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ASE Quote</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>RDS-Deal Hash</relationshipLabel>
        <relationshipName>RDS_Deal_Hash</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NEW</fullName>
                    <default>true</default>
                    <label>NEW</label>
                </value>
                <value>
                    <fullName>UPDATE</fullName>
                </value>
                <value>
                    <fullName>UPDATE_PREMISE</fullName>
                </value>
                <value>
                    <fullName>SOFT_DISCONNECT</fullName>
                </value>
                <value>
                    <fullName>ADD_PREMISE</fullName>
                </value>
                <value>
                    <fullName>CHANGE_FEATURE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_ID__c</fullName>
        <defaultValue>&quot;20991&quot;</defaultValue>
        <label>Application ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Archive_Status__c</fullName>
        <description>This field will be true only for Cancel inflight scenario 2 &amp; 3 before sending update deal hash call for inflight. See CancelInflight_Controller</description>
        <label>Archive Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Archive_requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Archive Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bundle_Account_Number__c</fullName>
        <label>Bundle Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CR_Auto_UDH_Sucessful__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be set to True after the Auto UDH call gets successful for the CR flow</description>
        <inlineHelpText>This field will be set to True after the Auto UDH call gets successful for the CR flow</inlineHelpText>
        <label>CR Auto UDH Successful</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Charge_Element_ID__c</fullName>
        <label>Charge Element ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compare_Rate_Plan_Start_Date_Start_Dat__c</fullName>
        <description>Only for Reporting Purpose for ITS-007368</description>
        <formula>IF(DATEVALUE(Rate_Stability_Date__c)= DATEVALUE(Start_Date__c) , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compare Rate Stability Date &amp; Start Dat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Compare_Rate_Stability_Date_Start_Dat__c</fullName>
        <description>Only for Reporting Purpose for ITS-007368</description>
        <formula>IF(DATEVALUE(Rate_Stability_Date__c)= DATEVALUE(Start_Date__c) , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compare Rate Stability Date &amp; Start Dat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competitive_Discount_Indicator__c</fullName>
        <label>Competitive Discount Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractEndDate__c</fullName>
        <formula>TEXT(MONTH(Contract_End_Date_Hidden__c))+&quot;/&quot; +TEXT(DAY(Contract_End_Date_Hidden__c))+&quot;/&quot; +TEXT(YEAR(Contract_End_Date_Hidden__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ContractEndDate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Action_Tooltips__c</fullName>
        <formula>IF(Contract_Renewal_Status__c &lt;&gt; &apos;Expired&apos;,&quot;Only expired contracts are eligible for renewal.&quot;, 
IF(!IsEligibleForContract__c,&quot;One or more sites has Pending status. All the sites must be Active to renew the contract.&quot;, 
IF(Contract_Renewal_Lock__c,&quot;This contract is currently being worked on by another user. Please try later.&quot;,
IF(TEXT(Contract_Renewal_Stage__c) == &apos;Offline Process Initiated&apos; || TEXT(Contract_Renewal_Stage__c) == &apos;Renewal Request Pending&apos;,&quot;A contract renewal request is currently Pending&quot;, 
IF(TEXT(Contract_Renewal_Stage__c) == &apos;Special Pricing Requested&apos;,&quot;A Special Pricing request is currently Pending.&quot;,&apos;&apos;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Action Tooltips</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date_Hidden__c</fullName>
        <formula>IF(
  AND(
    MONTH(DATEVALUE(Start_Date__c)) = 2,
    DAY(DATEVALUE(Start_Date__c)) = 29,
    NOT( 
      OR( 
        MOD(YEAR(DATEVALUE(Start_Date__c)) + VALUE(Term__c)/12, 400 ) = 0, 
        AND( 
          MOD(YEAR(DATEVALUE(Start_Date__c)) + VALUE(Term__c)/12, 4 ) = 0,
          MOD(YEAR(DATEVALUE(Start_Date__c)) + VALUE(Term__c)/12, 100 ) != 0
        )
      )
    ) 
  ),
  DATE(YEAR(DATEVALUE(Start_Date__c)) + VALUE(Term__c)/12, 3, 1),
  DATE(YEAR(DATEVALUE(Start_Date__c)) + VALUE(Term__c)/12, MONTH(DATEVALUE(Start_Date__c)), DAY(DATEVALUE(Start_Date__c)) )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract End Date Hidden</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <label>Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Renewal_Lock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Renewal Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Renewal_LockedBy_UserId__c</fullName>
        <label>Contract Renewal LockedBy UserId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Renewal_Stage__c</fullName>
        <label>Contract Renewal Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Offline Process Initiated</fullName>
                </value>
                <value>
                    <fullName>Special Pricing Requested</fullName>
                </value>
                <value>
                    <fullName>Renewal Request Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Renewal_Status__c</fullName>
        <formula>IF( Contract_End_Date_Hidden__c &gt; TODAY(), &quot;Active&quot;,&quot;Expired&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Renewal Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountOfAVPN__c</fullName>
        <description>To get the count of AVPN on deal hash so that manual flag can be set to true</description>
        <label>CountOfAVPN</label>
        <summaryFilterItems>
            <field>RDS_Premise_Details__c.Service_Type__c</field>
            <operation>equals</operation>
            <value>AVPN</value>
        </summaryFilterItems>
        <summaryForeignKey>RDS_Premise_Details__c.DealHash__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CountOfRdsPremise__c</fullName>
        <description>This field contains the no of childs (RDS-Premise) )that RDS-Deal-hash contains.</description>
        <label>CountOfRdsPremise</label>
        <summaryFilterItems>
            <field>RDS_Premise_Details__c.Current_Version__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>RDS_Premise_Details__c.Site_Status__c</field>
            <operation>notEqual</operation>
            <value>HARD_DISCONNECT, CANCELLED</value>
        </summaryFilterItems>
        <summaryForeignKey>RDS_Premise_Details__c.DealHash__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <label>Currency Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Version_Count__c</fullName>
        <label>Current Version Count</label>
        <summaryFilterItems>
            <field>RDS_Premise_Details__c.Current_Version__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>RDS_Premise_Details__c.DealHash__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Customer_Business_Name__c</fullName>
        <label>Customer Business Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Defining_Group_ID__c</fullName>
        <label>Customer Defining Group ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_ID__c</fullName>
        <label>Customer ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Site_Id__c</fullName>
        <label>Customer Site Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DH_Quote_Id__c</fullName>
        <label>DH Quote Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DH_Quote_Name__c</fullName>
        <label>DH Quote Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Hash_Status__c</fullName>
        <label>Deal Hash Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACTIVE</fullName>
                </value>
                <value>
                    <fullName>INACTIVE</fullName>
                </value>
                <value>
                    <fullName>HISTORICAL</fullName>
                </value>
                <value>
                    <fullName>PENDING</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Discount Amount</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_Plan_ID__c</fullName>
        <label>Discount Plan ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Edit_Expired_Date__c</fullName>
        <description>For Calculating Expired Timstamp</description>
        <label>Edit Expired Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Eligible_Deal_Hash__c</fullName>
        <formula>IF(ServiceType__c == &quot;AVPN&quot; || ServiceType__c ==&quot;MIS&quot; || (ServiceType__c == &quot;ASE&quot; &amp;&amp;  Opportunity__r.Account.ASE_Product__c == true &amp;&amp; INCLUDES(Opportunity__r.Account.Product_Trainings_Completed__c, &quot;ASE&quot;)), true, false)</formula>
        <label>Eligible Deal Hash</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Customer_Name__c</fullName>
        <label>End Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exclude_from_SA_Contract_Subscription__c</fullName>
        <formula>Opportunity__r.Account.Exclude_from_SA_Contract_Subscription__c</formula>
        <label>Exclude from SA Contract Subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GRID_Deal_Hash_Number__c</fullName>
        <label>GRID Deal Hash Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Cancel_Failed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Cancel API Failed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HiddenField__c</fullName>
        <formula>Opportunity__r.Discounted_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HiddenField</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Hidden_Sub_Account_Number__c</fullName>
        <formula>VALUE(Sub_Account_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hidden_Sub_Account_Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hierarchy_ID__c</fullName>
        <label>Hierarchy ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPFLEXDEAL__c</fullName>
        <description>For tracking if the  master Deal has a IPflex Deal</description>
        <formula>if(Opportunity__r.IPFlex_Deal__c==&apos;True&apos;,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IPFLEX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPFLEX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IPFLEX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inventory_Lookup_Call_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Technical Field to send OB to get latest Site Status of Premise. Will be updated by API_MACD_Disconnect_Controller and Workflow. Not to be placed on Page Layout.</description>
        <label>Inventory Lookup Call Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inventory_Lookup_Status__c</fullName>
        <label>Inventory Lookup Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Account_Number__c</fullName>
        <label>Invoice Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsCDG_SubAccountSucess__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCDG/SubAccountSucess</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDealHashCreationSuccess__c</fullName>
        <defaultValue>false</defaultValue>
        <description>will be true whenever the deal hash creation is successfull.</description>
        <label>IsDealHashCreationSuccess</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsEligibleForContract__c</fullName>
        <formula>IF(((Premise_Count_for_Contract_Renewal__c == Current_Version_Count__c) &amp;&amp; PremiseDetailActiveCount__c &gt; 0), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsEligibleForContract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsReviewCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check once Review is completed.</description>
        <label>IsReviewCompleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSAContractSuccess__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSAContractSuccess</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Inflight__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Inflight?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_MACDReviewComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is MACDReviewComplete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Review_Complete_for_Version__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator to check all Premise related to selected version are reviewed.</description>
        <label>Is Review Complete for Version</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Timestamp__c</fullName>
        <label>Last Modified Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MACD_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MACD Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>RDS-Deal Hash (MACD Opportunity)</relationshipLabel>
        <relationshipName>RDS_Deal_Hash</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MACD_UDH_In_Progress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MACD UDH In-Progress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MACD_Update_Error_Code__c</fullName>
        <label>MACD Update Error Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MACD_Update_Status__c</fullName>
        <label>MACD Update Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ManualFlow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For backend technical field</description>
        <label>ManualFlow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Master_Customer_Number__c</fullName>
        <defaultValue>&quot;SZ7969&quot;</defaultValue>
        <label>Master Customer Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Order_Number__c</fullName>
        <formula>Opportunity__r.BID_ID__c</formula>
        <label>Master Order Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modified_By_Application_Id__c</fullName>
        <label>Modified By Application Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Sites__c</fullName>
        <formula>IF( ServiceType__c == &quot;ASE&quot;, Opportunity__r.Number_of_Products__c, CountOfRdsPremise__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Sites</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_Contract_Number__c</fullName>
        <label>Old Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Credit_Check_Status__c</fullName>
        <description>This is a technical field to capture Credit Check Status from related Opportunity. This field is used in button code for RDS Review Completed.</description>
        <formula>TEXT(Opportunity__r.Credit_Check_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Credit Check Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Master Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>RDS-Deal Hash</relationshipLabel>
        <relationshipName>Deal_Hash</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <label>Order Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originating_System_Account_ID__c</fullName>
        <description>RDS-Deal Hash-Originating System Account ID</description>
        <label>Originating System Account ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_Rate_Amount__c</fullName>
        <label>Override Rate Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PremiseCount__c</fullName>
        <label>PremiseCount</label>
        <summaryFilterItems>
            <field>RDS_Premise_Details__c.MACD_Change_Type__c</field>
            <operation>equals</operation>
            <value>Contract Renewal</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>RDS_Premise_Details__c.Current_Version__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>RDS_Premise_Details__c.DealHash__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PremiseDetailActiveCount__c</fullName>
        <description>Muneesh, for Jared&apos;s report because report type has limitations</description>
        <label>PremiseDetailActiveCount</label>
        <summaryFilterItems>
            <field>RDS_Premise_Details__c.Site_Status__c</field>
            <operation>equals</operation>
            <value>ACTIVE</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>RDS_Premise_Details__c.Current_Version__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>RDS_Premise_Details__c.DealHash__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Premise_Count_for_Contract_Renewal__c</fullName>
        <label>Premise Count for Contract Renewal</label>
        <summaryFilterItems>
            <field>RDS_Premise_Details__c.Current_Version__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>RDS_Premise_Details__c.Site_Status__c</field>
            <operation>equals</operation>
            <value>ACTIVE, SOFT_DISCONNECT, HARD_DISCONNECT, CANCELLED</value>
        </summaryFilterItems>
        <summaryForeignKey>RDS_Premise_Details__c.DealHash__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Premise_Notification_Update_Failed__c</fullName>
        <description>Set the count of premise with Notification Status like &apos;Update Failed&apos;</description>
        <label>Premise Notification Update Failed</label>
        <summaryFilterItems>
            <field>RDS_Premise_Details__c.Notification_Status__c</field>
            <operation>equals</operation>
            <value>Update Failed</value>
        </summaryFilterItems>
        <summaryForeignKey>RDS_Premise_Details__c.DealHash__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RDS_Expired_Date__c</fullName>
        <formula>RDS_Received_Time_New__c+365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Edit Expired Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RDS_Received_Time_New__c</fullName>
        <label>RDS Received Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RDS_Submitted_By__c</fullName>
        <label>RDS Submitted By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDS_Version_Select__c</fullName>
        <label>RDS Version Select</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ALL</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RDS_Version__c</fullName>
        <defaultValue>1</defaultValue>
        <label>RDS Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RDS_object_status__c</fullName>
        <label>RDS Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Review in progress</fullName>
                </value>
                <value>
                    <fullName>Edit period expired</fullName>
                </value>
                <value>
                    <fullName>Review completed</fullName>
                </value>
                <value>
                    <fullName>Deal Hash Creation API in Progress</fullName>
                </value>
                <value>
                    <fullName>Deal Hash Creation API Successful</fullName>
                </value>
                <value>
                    <fullName>Deal Hash Creation API Failed</fullName>
                </value>
                <value>
                    <fullName>SA Contract Subscription API Failed</fullName>
                </value>
                <value>
                    <fullName>SA Contract Subscription API in Progress</fullName>
                </value>
                <value>
                    <fullName>SA Contract Subscription API Successful</fullName>
                </value>
                <value>
                    <fullName>Deal Hash Update - Cancel API In Progress</fullName>
                </value>
                <value>
                    <fullName>Deal Hash Update - Cancel API Successful</fullName>
                </value>
                <value>
                    <fullName>Deal Hash Update - Cancel API Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RDS_received_time__c</fullName>
        <label>RDS Received Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Rate_Plan_ID__c</fullName>
        <description>Deal Hash-Contract Details-Rate Plans-Rate Plan ID</description>
        <label>Rate Plan ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Plan_Start_Date__c</fullName>
        <formula>DATEVALUE(Start_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rate Plan Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rate_Stability_Date__c</fullName>
        <description>Deal Hash-Contract Details-Rate Plans-Rate Stability Date</description>
        <label>Rate Stability Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Renewal_Contract_Quote_Name__c</fullName>
        <formula>RenewedQuote__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Contract Quote Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RenewedQuote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is a techical Field</inlineHelpText>
        <label>Renewed Quote</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>RDS-Deal Hash (Renewed Quote)</relationshipLabel>
        <relationshipName>RDS_Deal_Hash1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDC_Account_End_Customer_ID_AEJ_ID__c</fullName>
        <label>SFDC Account End Customer ID (AEJ ID)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Account_End_Customer_Override__c</fullName>
        <description>Used to override the SFDC Account End Customer ID (AEJ ID) value on the Circuit &amp; VLAN Details. Primarily used only for rare deals of type Private Line with different end customers.</description>
        <label>SFDC Account End Customer Override</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected_Opportunity__c</fullName>
        <description>This field is to capture the Unique Customer Project Number from RDS Premise Details based on the version # in RDS Version Select field.</description>
        <label>Selected Opportunity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceType__c</fullName>
        <formula>IF(CONTAINS(Contract_Number__c, &quot;AVPN&quot;),&quot;AVPN&quot;, IF(CONTAINS(Contract_Number__c, &quot;MIS&quot;),&quot;MIS&quot;, &quot;ASE&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ServiceType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StabilityDate__c</fullName>
        <description>For storing Date value of Rate Stability Date</description>
        <formula>DATEVALUE( Rate_Stability_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stability Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Deal Hash-Contract Details-Start Date</description>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sub_Account_Number__c</fullName>
        <label>Sub Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>